--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
   align-items: center;
   height: 100vh;
 
-  background: linear-gradient(rgb(0, 249, 236), rgb(71, 150, 229));
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(159,9,196,1) 0%, rgba(240,79,246,1) 36%, rgba(197,41,201,1) 78%);
 }
 
 #noButton {
